--- a/src/components/Toolbar/Toolbar.scss
+++ b/src/components/Toolbar/Toolbar.scss
@@ -25,7 +25,7 @@
 
 body:global(.expanded) {
   .toolbar {
-    left: 54px;
+    left: 88px;
   }
 }
 
