--- a/src/dashboard/Data/Browser/Browser.scss
+++ b/src/dashboard/Data/Browser/Browser.scss
@@ -28,7 +28,7 @@
 
 body:global(.expanded) {
   .browser {
-    left: 54px;
+    left: 88px;
   }
 }
 
